Java code modernization and update book manuscript