@@ -8,23 +8,29 @@ import static com.knowledgegraphnavigator.Log.sparql;
 import static com.knowledgegraphnavigator.Log.clearSparql;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Scanner;
+import java.util.concurrent.ThreadLocalRandom;
 
 public class KGN {
 
-  private static List<String> demosList =
-      Arrays.asList(
-          "Bill Gates and Melinda Gates worked at Microsoft",
-          "IBM opened an office in Canada",
-          "Steve Jobs worked at Apple Computer and visited IBM and Microsoft in Seattle");
+  private static final List<String> DEMOS_LIST = List.of(
+      "Bill Gates and Melinda Gates worked at Microsoft",
+      "IBM opened an office in Canada",
+      "Steve Jobs worked at Apple Computer and visited IBM and Microsoft in Seattle");
+
+  /** Single Scanner instance to avoid resource leaks from repeated System.in wrapping. */
+  private final Scanner consoleScanner = new Scanner(System.in);
 
   public KGN() throws Exception {
-    Sparql endpoint = new Sparql();
+    var endpoint = new Sparql();
 
     while (true) {
       String query = getUserQueryFromConsole();
+      if (query == null || query.isBlank()) {
+        out("Exiting KGN.");
+        break;
+      }
       out("\nProcessing query:\n" + query + "\n");
       if (query.equalsIgnoreCase("sparql")) {
         out("Generated SPARQL used to get current results:\n");
@@ -32,94 +38,90 @@ public class KGN {
         out("\n");
         clearSparql();
       } else {
-        if (query.equalsIgnoreCase("demo")) {
-          query = demosList.get((int) (Math.random() * (demosList.size() + 1)));
-        }
-        TextToDbpediaUris kt = new TextToDbpediaUris(query);
-        List<EntityAndDescription> userSelectedPeople = new ArrayList();
-        if (kt.personNames.size() > 0) {
-          for (int i = 0; i < kt.personNames.size(); i++) {
-            userSelectedPeople.add(
-                new EntityAndDescription(kt.personNames.get(i), kt.personUris.get(i)));
-          }
-        }
-        List<EntityAndDescription> userSelectedCompanies = new ArrayList();
-        if (kt.companyNames.size() > 0) {
-          for (int i = 0; i < kt.companyNames.size(); i++) {
-            userSelectedCompanies.add(
-                new EntityAndDescription(kt.companyNames.get(i), kt.companyUris.get(i)));
-          }
-        }
-        List<EntityAndDescription> userSelectedCities = new ArrayList();
-        if (kt.cityNames.size() > 0) {
-          out("+++++ kt.cityNames:" + kt.cityNames.toString());
-          for (int i = 0; i < kt.cityNames.size(); i++) {
-            userSelectedCities.add(
-                new EntityAndDescription(kt.cityNames.get(i), kt.cityUris.get(i)));
-          }
-        }
-        List<EntityAndDescription> userSelectedCountries = new ArrayList();
-        if (kt.countryNames.size() > 0) {
-          out("+++++ kt.countryNames:" + kt.countryNames.toString());
-          for (int i = 0; i < kt.countryNames.size(); i++) {
-            userSelectedCountries.add(
-                new EntityAndDescription(kt.countryNames.get(i), kt.countryUris.get(i)));
-          }
-        }
-        new PrintEntityResearchResults(endpoint,
-            userSelectedPeople,
-            userSelectedCompanies,
-            userSelectedCities,
-            userSelectedCountries);
+        processQuery(endpoint, query);
+      }
+    }
+  }
 
-        for (EntityAndDescription person1 : userSelectedPeople) {
-          for (EntityAndDescription person2 : userSelectedPeople) {
-            if (person1 != person2) {
-              QueryResult qr = EntityRelationships.results(endpoint, person1.entityUri, person2.entityUri);
-              if (qr.rows.size() > 0) {
-                out("Relationships between person " + person1.entityName +
-                    " person " + person2.entityName + ":");
-                out(qr.toString());
-              }
-            }
+  private void processQuery(Sparql endpoint, String query) throws Exception {
+    if (query.equalsIgnoreCase("demo")) {
+      query = DEMOS_LIST.get(ThreadLocalRandom.current().nextInt(DEMOS_LIST.size()));
+    }
+    var kt = new TextToDbpediaUris(query);
+
+    var userSelectedPeople = buildEntityList(kt.personNames, kt.personUris);
+    var userSelectedCompanies = buildEntityList(kt.companyNames, kt.companyUris);
+
+    if (!kt.cityNames.isEmpty()) {
+      out("+++++ kt.cityNames:" + kt.cityNames.toString());
+    }
+    var userSelectedCities = buildEntityList(kt.cityNames, kt.cityUris);
+
+    if (!kt.countryNames.isEmpty()) {
+      out("+++++ kt.countryNames:" + kt.countryNames.toString());
+    }
+    var userSelectedCountries = buildEntityList(kt.countryNames, kt.countryUris);
+
+    PrintEntityResearchResults.printResults(endpoint,
+        userSelectedPeople,
+        userSelectedCompanies,
+        userSelectedCities,
+        userSelectedCountries);
+
+    for (var person1 : userSelectedPeople) {
+      for (var person2 : userSelectedPeople) {
+        if (person1 != person2) {
+          QueryResult qr = EntityRelationships.results(endpoint, person1.entityUri(), person2.entityUri());
+          if (!qr.rows.isEmpty()) {
+            out("Relationships between person " + person1.entityName() +
+                " person " + person2.entityName() + ":");
+            out(qr.toString());
           }
         }
-        //  Bill Gates, Melinda Gates and Steve Jobs at Apple Computer, IBM and Microsoft in Seattle
-        for (EntityAndDescription person : userSelectedPeople) {
-          for (EntityAndDescription company : userSelectedCompanies) {
-            QueryResult qr = EntityRelationships.results(endpoint, person.entityUri, company.entityUri);
-            if (qr.rows.size() > 0) {
-              out("Relationships between person " + person.entityName +
-                  " company " + company.entityName + ":");
-              out(qr.toString());
-            }
-          }
+      }
+    }
+    //  Bill Gates, Melinda Gates and Steve Jobs at Apple Computer, IBM and Microsoft in Seattle
+    for (var person : userSelectedPeople) {
+      for (var company : userSelectedCompanies) {
+        QueryResult qr = EntityRelationships.results(endpoint, person.entityUri(), company.entityUri());
+        if (!qr.rows.isEmpty()) {
+          out("Relationships between person " + person.entityName() +
+              " company " + company.entityName() + ":");
+          out(qr.toString());
         }
-        for (EntityAndDescription company1 : userSelectedCompanies) {
-          for (EntityAndDescription company2 : userSelectedCompanies) {
-            if (company1 != company2) {
-              QueryResult qr = EntityRelationships.results(endpoint, company1.entityUri, company2.entityUri);
-              if (qr.rows.size() > 0) {
-                out("Relationships between company " + company1.entityName +
-                    " company " + company2.entityName + ":");
-                out(qr.toString());
-              }
-            }
+      }
+    }
+    for (var company1 : userSelectedCompanies) {
+      for (var company2 : userSelectedCompanies) {
+        if (company1 != company2) {
+          QueryResult qr = EntityRelationships.results(endpoint, company1.entityUri(), company2.entityUri());
+          if (!qr.rows.isEmpty()) {
+            out("Relationships between company " + company1.entityName() +
+                " company " + company2.entityName() + ":");
+            out(qr.toString());
           }
         }
       }
     }
   }
 
+  /**
+   * Build a list of EntityAndDescription from parallel name/URI lists.
+   */
+  private static List<EntityAndDescription> buildEntityList(List<String> names, List<String> uris) {
+    var result = new ArrayList<EntityAndDescription>();
+    for (int i = 0; i < names.size(); i++) {
+      result.add(new EntityAndDescription(names.get(i), uris.get(i)));
+    }
+    return result;
+  }
+
   private String getUserQueryFromConsole() {
     out("Enter entities query:");
-    Scanner input = new Scanner(System.in);
-    String ret = "";
-    while (input.hasNext()) {
-      ret = input.nextLine();
-      break;
+    if (consoleScanner.hasNextLine()) {
+      return consoleScanner.nextLine();
     }
-    return ret;
+    return "";
   }
 
   public static void main(String[] args) throws Exception {
