@@ -1,20 +1,24 @@
 package com.markwatson.ollama;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.OutputStream;
-import java.net.HttpURLConnection;
 import java.net.URI;
-import java.net.URL;
-import java.net.URLConnection;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.time.Duration;
 
 import org.json.JSONObject;
 
 public class OllamaLlmClient {
+
+    private static final String DEFAULT_BASE_URL = "http://localhost:11434";
+    private static final Duration REQUEST_TIMEOUT = Duration.ofMinutes(3);
+
+    private static final HttpClient HTTP_CLIENT = HttpClient.newBuilder()
+            .connectTimeout(Duration.ofSeconds(10))
+            .build();
 
     public static void main(String[] args) throws Exception {
         String prompt = "Translate the following English text to French: 'Hello, how are you?'";
@@ -22,43 +26,32 @@ public class OllamaLlmClient {
         System.out.println("completion: " + completion);
     }
 
-    public static String getCompletion(String prompt, String modelName) throws Exception {
+    public static String getCompletion(String prompt, String modelName) throws IOException, InterruptedException {
+        return getCompletion(prompt, modelName, DEFAULT_BASE_URL);
+    }
+
+    public static String getCompletion(String prompt, String modelName, String baseUrl)
+            throws IOException, InterruptedException {
         System.out.println("prompt: " + prompt + ", modelName: " + modelName);
- 
-        // New JSON message format
-        JSONObject message = new JSONObject();
+
+        // Build JSON request payload
+        var message = new JSONObject();
         message.put("prompt", prompt);
         message.put("model", modelName);
         message.put("stream", false);
-        URI uri = new URI("http://localhost:11434/api/generate");
-        URL url = uri.toURL();
-        //System.out.println("jsonBody: " + jsonBody);
-        URLConnection connection = url.openConnection();
-        connection.setDoOutput(true);
-        connection.setRequestProperty("Content-Type", "application/json");
-        // Send the JSON payload
-        try (OutputStream os = connection.getOutputStream()) {
-            byte[] input = message.toString().getBytes("utf-8");
-             os.write(input, 0, input.length);
-        }
 
-        StringBuilder response;
-        // Read the response from the server
-        try (BufferedReader br = new BufferedReader(
-                new InputStreamReader(connection.getInputStream(), "utf-8"))) {
-            response = new StringBuilder();
-            String responseLine;
-            while ((responseLine = br.readLine()) != null) {
-                response.append(responseLine.trim());
-            }
-            System.out.println(response.toString());
-        }
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(baseUrl + "/api/generate"))
+                .header("Content-Type", "application/json")
+                .timeout(REQUEST_TIMEOUT)
+                .POST(HttpRequest.BodyPublishers.ofString(message.toString()))
+                .build();
 
-        ((HttpURLConnection) connection).disconnect();
+        HttpResponse<String> response = HTTP_CLIENT.send(request, HttpResponse.BodyHandlers.ofString());
+        System.out.println(response.body());
 
-        JSONObject jsonObject = new JSONObject(response.toString());
-        String s = jsonObject.getString("response");
-        return s;
+        var jsonObject = new JSONObject(response.body());
+        return jsonObject.getString("response");
     }
 
     /***
@@ -67,19 +60,15 @@ public class OllamaLlmClient {
 
     // read the contents of a file path into a Java string
     public static String readFileToString(String filePath) throws IOException {
-        Path path = Paths.get(filePath);
-        return new String(Files.readAllBytes(path));
+        return Files.readString(Path.of(filePath));
     }
 
     public static String replaceSubstring(String originalString, String substringToReplace, String replacementString) {
         return originalString.replace(substringToReplace, replacementString);
     }
+
     public static String promptVar(String prompt0, String varName, String varValue) {
         String prompt = replaceSubstring(prompt0, varName, varValue);
         return replaceSubstring(prompt, varName, varValue);
-    }   
+    }
 }
-
-
-
-
