@@ -1,75 +1,38 @@
 package com.markwatson.openai;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.OutputStream;
-import java.net.HttpURLConnection;
-import java.net.URI;
-import java.net.URL;
-import java.net.URLConnection;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
-import org.json.JSONArray;
-import org.json.JSONObject;
+import com.openai.client.OpenAIClient;
+import com.openai.client.okhttp.OpenAIOkHttpClient;
+import com.openai.models.ChatModel;
+import com.openai.models.chat.completions.ChatCompletion;
+import com.openai.models.chat.completions.ChatCompletionCreateParams;
 
 public class OpenAICompletions {
 
-    public static void main(String[] args) throws Exception {
-        String prompt = "Translate the following English text to French: 'Hello, how are you?'";
-        String completion = getCompletion(prompt);
+    // Reuse a single client instance (connection pool + thread pool efficiency)
+    private static final OpenAIClient client = OpenAIOkHttpClient.fromEnv();
+
+    public static void main(String[] args) {
+        var prompt = "Translate the following English text to French: 'Hello, how are you?'";
+        var completion = getCompletion(prompt);
         System.out.println("completion: " + completion);
     }
 
-    public static String getCompletion(String prompt) throws Exception {
+    public static String getCompletion(String prompt) {
         System.out.println("prompt: " + prompt);
-        String apiKey = System.getenv("OPENAI_API_KEY");
-        String model = "gpt-5-mini"; // Replace with the desired model
 
-        // New JSON message format
-        JSONObject message = new JSONObject();
-        message.put("role", "user");
-        message.put("content", prompt);
+        var params = ChatCompletionCreateParams.builder()
+                .addUserMessage(prompt)
+                .model(ChatModel.GPT_5_MINI)
+                .build();
 
-        JSONArray messages = new JSONArray();
-        messages.put(message);
-        //System.out.println("messages: " + messages.toString());
-        JSONObject jsonBody = new JSONObject();
-        jsonBody.put("messages", messages);
-        jsonBody.put("model", model);
-        URI uri = new URI("https://api.openai.com/v1/chat/completions");
-        URL url = uri.toURL();
-        //System.out.println("jsonBody: " + jsonBody);
-        URLConnection connection = url.openConnection();
-        connection.setDoOutput(true);
-        connection.setRequestProperty("Content-Type", "application/json");
-        connection.setRequestProperty("Authorization", "Bearer " + apiKey);
-        // Send the JSON payload
-        try (OutputStream os = connection.getOutputStream()) {
-            byte[] input = jsonBody.toString().getBytes("utf-8");
-             os.write(input, 0, input.length);
-        }
+        ChatCompletion chatCompletion = client.chat().completions().create(params);
 
-        StringBuilder response;
-        // Read the response from the server
-        try (BufferedReader br = new BufferedReader(
-                new InputStreamReader(connection.getInputStream(), "utf-8"))) {
-            response = new StringBuilder();
-            String responseLine;
-            while ((responseLine = br.readLine()) != null) {
-                response.append(responseLine.trim());
-            }
-            System.out.println(response.toString());
-        }
-
-        ((HttpURLConnection) connection).disconnect();
-        JSONObject jsonObject = new JSONObject(response.toString());
-        JSONArray choices = jsonObject.getJSONArray("choices");
-        JSONObject messageObject = choices.getJSONObject(0).getJSONObject("message");
-        String content = messageObject.getString("content");
-        //System.out.println("content: " + content);
+        var content = chatCompletion.choices().get(0).message().content().orElse("");
+        System.out.println(content);
         return content;
     }
 
@@ -80,8 +43,7 @@ public class OpenAICompletions {
 
     // read the contents of a file path into a Java string
     public static String readFileToString(String filePath) throws IOException {
-        Path path = Paths.get(filePath);
-        return new String(Files.readAllBytes(path));
+        return Files.readString(Path.of(filePath));
     }
 
     public static String replaceSubstring(String originalString, String substringToReplace, String replacementString) {
